Table user_roles {
  id int [pk, increment]
  name text [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}

Table users {
  id int [pk, increment]
  full_name_kms text [not null]
  email_sha varchar(256) [unique, not null]
  email_kms text [not null]
  role_id int [not null]
  password_sha varchar(256) [not null]
  password_kms text [not null]
  terms_accepted boolean [not null]
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: users.role_id > user_roles.id

Table token_types {
  id int [pk, increment]
  name varchar [not null]
  description varchar
  is_active boolean [not null]
  updated_at datetime
  created_at datetime [not null]
}

Table jwt_sessions {
  id int [pk, increment]
  jti varchar [not null]
  device_uuid text [not null]
  user_id int [not null]
  token_type_id int [not null]
  issued_at datetime [not null]
  expires_at datetime [not null]
  is_active boolean [not null]
}
Ref: jwt_sessions.user_id > users.id
Ref: jwt_sessions.token_type_id > token_types.id

Table blacklist_types {
  id int [pk, increment]
  name text [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}

Table blacklist {
  id int [pk, increment]
  user_id int [not null]
  blacklist_type_id int [not null]
  reason text [not null]
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: blacklist.user_id > users.id
Ref: blacklist.blacklist_type_id > blacklist_types.id

Table user_phone_types {
  id int [pk, increment]
  type text [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}

Table user_phones {
  id int [pk, increment]
  user_id int [not null]
  user_phone_type_id int [not null]
  phone_number_kms text [not null]
  is_principal boolean [not null]
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: user_phones.user_phone_type_id > user_phone_types.id
Ref: user_phones.user_id > users.id

Table currencies {
  id int [pk, increment]
  name text [not null]
  description text
  symbol varchar(1) [not null]
  iso_4217_code varchar(3) [not null]
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}

Table product_business_type {
  id int [pk, increment]
  name text [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}

Table product_category {
  id int [pk, increment]
  name text [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}

Table products {
  id int [pk, increment]
  name text [not null]
  description text
  image_url text
  product_business_type_id int [not null]
  product_category_id int [not null]
  rentPrice numeric(15,2)
  sellPrice numeric(15,2)
  currency_id int [not null]
  quantity int [not null]
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: products.product_business_type_id > product_business_type.id
Ref: products.product_category_id > product_category.id
Ref: products.currency_id > currencies.id

Table product_detail_types {
  id int [pk, increment]
  name text [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}

Table product_details {
  id int [pk, increment]
  product_id int [not null]
  product_detail_type_id int [not null]
  detail text [not null]
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: product_details.product_id > products.id
Ref: product_details.product_detail_type_id > product_detail_types.id

Table countries {
  id int [pk, increment]
  name text [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}

Table departments {
  id int [pk, increment]
  name text [not null]
  country_id int [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: departments.country_id > countries.id

Table municipalities {
  id int [pk, increment]
  name text [not null]
  department_id int [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: municipalities.department_id > departments.id

Table zones {
  id int [pk]
  name text [not null]
  municipality_id int [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: zones.municipality_id > municipalities.id

Table addresses {
  id int [pk, increment]
  user_id int [not null]
  zone_id int [not null]
  address_kms text [not null]
  coords_kms text
  instructions_kms text
  domicile_price numeric(15,2)
  delivery_time_minutes int
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: addresses.user_id > users.id
Ref: addresses.zone_id > zones.id

Table service_status {
  id int [pk, increment]
  name text [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}

Table payment_status {
  id int [pk, increment]
  name text [not null]
  description text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}

Table services {
  id int [pk, increment]
  user_id int [not null]
  delivery_name_kms text [not null]
  address_id int [not null]
  user_phone_id int [not null]
  description text
  service_start timestamp  [not null]
  service_end timestamp  [not null]
  total_amount numeric(15,2) [not null]
  currency_id int [not null]
  service_status_id int [not null]
  payment_status_id int [not null]
  comment text
  invoice_number_kms text
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: services.user_id > users.id
Ref: services.address_id > addresses.id
Ref: services.user_phone_id > user_phones.id
Ref: services.currency_id > currencies.id
Ref: services.service_status_id > service_status.id
Ref: services.payment_status_id > payment_status.id

Table service_details {
  id int [pk, increment]
  service_id int [not null]
  product_id int [not null]
  quantity int [not null]
  unitary_price numeric(15,2) [not null]
  parcial_price numeric(15,2) [not null]
  currency_id int [not null]
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: service_details.service_id > services.id
Ref: service_details.product_id > products.id
Ref: service_details.currency_id > currencies.id

Table service_extras {
  id int [pk, increment]
  service_id int [not null]
  name text [not null]
  description text
  quantity int
  unitary_price numeric(15,2)
  parcial_price numeric(15,2)
  currency_id int
  is_active boolean [not null]
  updated_at timestamp
  created_at timestamp [not null]
}
Ref: service_extras.service_id > services.id
Ref: service_extras.currency_id > currencies.id